Fix overflow-x on main page
  - Make about section smaller

--- a/app/public/stylesheets/index/style.scss
+++ b/app/public/stylesheets/index/style.scss
@@ -10,6 +10,10 @@ section{
     color: black;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 .site-container{
 
     .background-gradient{
@@ -22,6 +26,7 @@ section{
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      height: 75vh;
 
         .cards-container{
             width: 50%;
@@ -32,9 +37,10 @@ section{
             align-items: center;
 
             .card{
-                height: 350px;
-                width: 250px;
+                height: 280px;
+                width: 300px;
                 background: red;
+                border-radius: 15px;
             }
         }
     }
